--- a/art.html
+++ b/art.html
@@ -12,7 +12,8 @@
 	<!-- for IE -->
 	<link rel="icon" type="image/x-icon" href="img/logo.png" >
 	<link rel="shortcut icon" type="image/x-icon" href="img/logo.png"/>
-	<script src="https://code.jquery.com/jquery-1.10.2.js"></script></script>
+	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+	<script src="scroll.js"></script>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
@@ -119,6 +120,6 @@
 		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa foot fa-linkedin" style="font-size:25px"></a><br>
 		<span class="copyright">&copy; WEI CHENG | 2018.</span><br>
 	</footer>
-	<script src="scroll.js"></script>
+	<script src="loader.js"></script>
 </body>
 </html>
