--- a/projects/nsysuhero.html
+++ b/projects/nsysuhero.html
@@ -12,8 +12,9 @@
 	<!-- for IE -->
 	<link rel="icon" type="image/x-icon" href="../img/logo.png" >
 	<link rel="shortcut icon" type="image/x-icon" href="../img/logo.png"/>
-	<script src="https://code.jquery.com/jquery-1.10.2.js"></script></script>
-	<script src="../scroll.js"></script>
+	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+		<!-- AOS -->
+	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
@@ -55,7 +56,7 @@
 			</div>
 		</div>
 		
-		<div class="row-project">
+		<div class="row-project" data-aos="slide-up">
 			<div class="col-two">
 			<h5>Role</h5>
 			<p>I am the graphic designer in a team of 3 people. I designed elements including the objects, and background in the game scenes.</p>
@@ -67,10 +68,10 @@
 			</div>
 		</div>
 		
-		<div class="row-project">
+		<div class="row-project" data-aos="slide-up">
 			<div class="col-one">
 				<h5>Game Scenes</h5>
-				<img src="game_nsysuhero/nsysuhero_main.png" class="img-col-one"alt="">
+				<img src="game_nsysuhero/nsysuhero_main.png" class="img-col-one"alt="" data-aos="slide-up">
 				<h6>01-Home Page</h6>
 				<p>It is where letting user to choose between seeing the instruction page or starting the games.</p>
 				
@@ -92,7 +93,7 @@
 		</div>
 		</div>
 
-		<a href="web-krtco.html">
+		<a href="krtco.html">
 			<div class="seemore">
 				<div class="col-three">
 					<h6 class="hcenter">NEXT PROJRCT ></h6>
@@ -114,5 +115,7 @@
 		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa foot fa-linkedin" style="font-size:25px"></a><br>
 		<span class="copyright">&copy; WEI CHENG | 2018.</span><br>
 	</footer>
+	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+	<script src="../scroll.js"></script>
 </body>
 </html>
