--- a/projects/krtco.html
+++ b/projects/krtco.html
@@ -8,12 +8,12 @@
 	<!-- for FF, Chrome, Opera -->
 	<link rel="icon" type="image/png" href="img/logo.png" sizes="16x16">
 	<link rel="icon" type="image/png" href="img/logo.png" sizes="32x32">
+	
+	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
-	<!-- for IE -->
-	<link rel="icon" type="image/x-icon" href="../img/logo.png" >
-	<link rel="shortcut icon" type="image/x-icon" href="../img/logo.png"/>
-	<script src="https://code.jquery.com/jquery-1.10.2.js"></script></script>
-	<script src="../scroll.js"></script>
+	<!-- AOS -->
+	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
@@ -46,7 +46,7 @@
 	</div>
 
 	<div class="wrapper-project" id="wrapper">
-		<div class="row-project">
+		<div class="row-project" data-aos="slide-up">
 			<div class="col-two">
 				<h5>Project Overview</h5>
 				<p>
@@ -59,7 +59,7 @@
 			</div>
 		</div>
 		
-		<div class="row-project">
+		<div class="row-project" data-aos="slide-up">
 			<div class="col-three">
 			<h5>Role</h5>
 			<p>frontend UI design<br>UI development</p>
@@ -75,7 +75,7 @@
 				<p>6 months</p>
 			</div>
 		</div>
-		<div class="row-project">
+		<div class="row-project" data-aos="slide-up">
 			<div class="col-one">
 				<h5>User Interfaces</h5>
 				<img src="web_krtco/web_krtco1.png" alt="" class="img-col-one">
@@ -83,7 +83,7 @@
 				<img src="web_krtco/web_krtco3.png" alt="" class="img-col-one">
 			</div>
 		</div>
-		<a href="game-nsysuhero.html">
+		<a href="nsysuhero.html">
 			<div class="seemore">
 				<div class="col-three">
 					<h6 class="hcenter">NEXT PROJRCT ></h6>
@@ -105,5 +105,8 @@
 		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa foot fa-linkedin" style="font-size:25px"></a><br>
 		<span class="copyright">&copy; WEI CHENG | 2018.</span><br>
 	</footer>
+	
+	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+	<script src="../scroll.js"></script>
 </body>
 </html>
