add krtco content

--- a/projects/krtco.html
+++ b/projects/krtco.html
@@ -8,14 +8,15 @@
 	<!-- for FF, Chrome, Opera -->
 	<link rel="icon" type="image/png" href="img/logo.png" sizes="16x16">
 	<link rel="icon" type="image/png" href="img/logo.png" sizes="32x32">
-	
+
+	<!-- for IE -->
+	<link rel="icon" type="image/x-icon" href="../img/logo.png" >
+	<link rel="shortcut icon" type="image/x-icon" href="../img/logo.png"/>
 	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-
-	<!-- AOS -->
-	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
-
+		<!-- AOS -->
+	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
 	<title>KRTCO website | WEI CHENG</title>
 </head>
@@ -46,9 +47,9 @@
 	</div>
 
 	<div class="wrapper-project" id="wrapper">
-		<div class="row-project" data-aos="slide-up">
+		<div class="row-project">
 			<div class="col-two">
-				<h5>Project Overview</h5>
+				<h5>Overview</h5>
 				<p>
 					The website is developed for 2016 Coorporate Image Filming Competition of Kaoshiung Rapid Transit Coorperation for contestants to know information and register for the filming competition.
 				</p>
@@ -75,12 +76,21 @@
 				<p>6 months</p>
 			</div>
 		</div>
+		<div class="row-project row-project-color" data-aos="slide-up">
+			<div class="col-one">
+				<h5>Development Process</h5>
+				<img src="web_krtco/krtco4.png" alt="" class="img-col-one">
+			</div>
+		</div>		
 		<div class="row-project" data-aos="slide-up">
 			<div class="col-one">
 				<h5>User Interfaces</h5>
-				<img src="web_krtco/web_krtco1.png" alt="" class="img-col-one">
-				<img src="web_krtco/web_krtco2.png" alt="" class="img-col-one">
-				<img src="web_krtco/web_krtco3.png" alt="" class="img-col-one">
+				<img src="web_krtco/krtco1.png" alt="" class="img-col-one">
+				<h6>01 - Home Page</h6>
+				<img src="web_krtco/krtco2.png" alt="" class="img-col-one">
+				<h6>02 - Latest News</h6>
+				<img src="web_krtco/krtco3.png" alt="" class="img-col-one">
+				<h6>03 - Viewing Video</h6>
 			</div>
 		</div>
 		<a href="nsysuhero.html">
@@ -104,8 +114,7 @@
 		<a target="_blank" href="https://github.com/ChengWei1010" class="fa foot fa-github" style="font-size:25px"></a>
 		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa foot fa-linkedin" style="font-size:25px"></a><br>
 		<span class="copyright">&copy; WEI CHENG | 2018.</span><br>
-	</footer>
-	
+	<!-- </footer> -->
 	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 	<script src="../scroll.js"></script>
 </body>
