--- a/projects/nsysuhero.html
+++ b/projects/nsysuhero.html
@@ -16,7 +16,7 @@
 		<!-- AOS -->
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
 	<title>NSYSU HERO | WEI CHENG</title>
 </head>
@@ -47,15 +47,24 @@
 	</div>
 
 	<div class="wrapper-project" id="wrapper">
-		<div class="row-project row-project-color">
-			<div class="col-one">
+		<div class="row-project">
+			<div class="col-two">
 			<h5>Background</h5>
 				<p>This Unity 2-Dimentional game was made in a 2 days hackathon competition in Department of Information Management at National Sun Yat-sun University.<br><br>
-				NSYSU HERO is based on the geographical background of National Sun Yat-sun University. There are a lot of monkeys on the mountainous campus, and since sometimes the monkeys can be pretty aggressive, campus safeguards would use airgun to scareoff the monkeys preventing them from attacking students. Thus, this game use easy keyboard control the character to interact.
+				</p>
+			</div>
+			<div class="col-two">
+				<img src="game_nsysuhero/nsysuhero.svg" alt="" class="img-col-two">
+			</div>
+		</div>
+		<div class="row-project">
+			<div class="col-one">
+				<p>
+				NSYSU HERO is based on the geographical background of National Sun Yat-sun University. There are a lot of monkeys on the mountainous campus, and since sometimes the monkeys can be pretty aggressive, campus safeguards would use airgun to scareoff the monkeys preventing them from attacking students, and bring the monkeys back to their home to protect them. This game use easy keyboard control the character to interact.
 				</p>
 			</div>
 		</div>
-		
+
 		<div class="row-project" data-aos="slide-up">
 			<div class="col-two">
 			<h5>Role</h5>
@@ -71,26 +80,32 @@
 		<div class="row-project" data-aos="slide-up">
 			<div class="col-one">
 				<h5>Game Scenes</h5>
-				<img src="game_nsysuhero/nsysuhero_main.png" class="img-col-one"alt="" data-aos="slide-up">
-				<h6>01-Home Page</h6>
+				<img src="game_nsysuhero/nsysuhero1.png" class="img-col-one"alt="" data-aos="slide-up">
+				<h6>01 - Home Page</h6>
 				<p>It is where letting user to choose between seeing the instruction page or starting the games.</p>
 				
 				<img src="game_nsysuhero/nsysuhero_instruc.png" class="img-col-one"alt="">
-				<h6>02-Instruction Page</h6>
+				<h6>02 - Instruction Page</h6>
 				<p>It explains the rules about how to play this game.</p>
 
 				<img src="game_nsysuhero/nsysuhero_game.png" class="img-col-one"alt="">
-				<h6>03-Game Scene</h6>
+				<h6>03 - Game Scene</h6>
 				<p>The main page for the game. The donut indicates the life of the character.
 				It explains the rules about how to play this game.</p>
 			</div>
-		<div class="col-two">
-			<img src="game_nsysuhero/gamescene-3-1.png" class="img-col-two" alt="">
 		</div>
+		<div class="row-project" data-aos="slide-up">
+			<div class="col-one">
+				<h5>UI Elements</h5>
 
-		<div class="col-two">
-			<img src="game_nsysuhero/gamescene-3-2.png" class="img-col-two" alt="">
-		</div>
+			</div>
+			<div class="col-two">
+				<img src="game_nsysuhero/gamescene-3-1.png" class="img-col-two" alt="">
+			</div>
+
+			<div class="col-two">
+				<img src="game_nsysuhero/gamescene-3-2.png" class="img-col-two" alt="">
+			</div>
 		</div>
 
 		<a href="krtco.html">
