--- a/art.html
+++ b/art.html
@@ -15,7 +15,7 @@
 	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 	<script src="scroll.js"></script>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
 	<title>WEI CHENG | Portfolio</title>
 </head>
