--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
 	<title>PORTFOLIO | WEI CHENG</title>
 </head>
@@ -96,15 +96,15 @@
 	<div class="row-index">
 		<h2>PROJECTS</h2>
 	    <a href="projects/nsysuhero.html">
-		   	<div class="project-small" data-aos="fade-up">
-		    	<img class="project-size" src="projects/game_nsysuhero/nsysuhero.png" alt="">
+		   	<div class="project-small">
+		    	<img class="project-size" src="projects/game_nsysuhero/nsysuhero0.png" alt="" data-aos="fade-up">
 		    	<h3>NSYSU HERO</h3>
 		    	<h4>Game Design</h4>
 		    </div>
 	    </a>
 	    <a href="projects/krtco.html">
-		    <div class="project-small" data-aos="fade-down">
-		    	<img class="project-size" src="projects/web_krtco/krtco.png" alt="">
+		    <div class="project-small">
+		    	<img class="project-size" src="projects/web_krtco/krtco.png" alt="" data-aos="fade-down">
 		    	<h3>Kaohsiung Rapid Transit Co. Website</h3>
 		    	<h4>Web UI Design & Develop</h4>
 		    </div>
