add one section and modify toolbar

--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
 	    <a href="projects/krtco.html">
 		    <div class="project-small">
 		    	<img class="project-size" src="projects/web_krtco/krtco.png" alt="" data-aos="fade-down">
-		    	<h3>Kaohsiung Rapid Transit Co. Website</h3>
+		    	<h3>KRTCO Competition Website</h3>
 		    	<h4>Web UI Design & Develop</h4>
 		    </div>
 		</a>
 	</div>
 	<div class="row-index">
 		<h2>ABOUT WEI</h2>
-		<p>I have 3+ years frontend develop experience, I am familiar with app development, web frontend development, database management in SQL, System Analysis and Design Methods. I am now interested in UI/UX design.</p>
+		<p>I have 3+ years frontend develop experience,  I am now focusing UI/UX design. Familiar with app development, web frontend development, UI design.</p>
 		<div class="traits" data-aos="flip-left">
 			<img src="svg/light.svg" class="svg-index"/><br>
 			<h3>Creative</h3>
