--- a/projects/krtco.html
+++ b/projects/krtco.html
@@ -13,7 +13,7 @@
 	<link rel="icon" type="image/x-icon" href="../img/logo.png" >
 	<link rel="shortcut icon" type="image/x-icon" href="../img/logo.png"/>
 	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-		<!-- AOS -->
+	<!-- AOS -->
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
@@ -41,8 +41,8 @@
 
 	<div class="parallax-small parallax-krtco">
 		<article class="intro">
-			<h1>KRTCO website</h1>
-			<h2>web UI design & develop</h2>
+			<h1>KRTCO Competition Website</h1>
+			<h2>UI Design & Develop</h2>
 		</article>
 	</div>
 
@@ -60,7 +60,7 @@
 			</div>
 		</div>
 		
-		<div class="row-project" data-aos="slide-up">
+		<div class="row-project" data-aos="slide-up" data-aos-once="true" data-aos-offset="200">
 			<div class="col-three">
 			<h5>Role</h5>
 			<p>frontend UI design<br>UI development</p>
@@ -76,21 +76,48 @@
 				<p>6 months</p>
 			</div>
 		</div>
-		<div class="row-project row-project-color" data-aos="slide-up">
+		<div class="row-project row-project-color" data-aos="slide-up" data-aos-once="true">
 			<div class="col-one">
 				<h5>Development Process</h5>
+				This project is collaborated with Kaoshiung Rapid Transit Cooperation and used System Analysis and Design method to develop.
 				<img src="web_krtco/krtco4.png" alt="" class="img-col-one">
 			</div>
+		</div>
+		<div class="row-project">
+			<div class="col-two">
+				<b>1 -- System Planning and Analysis Phase</b><br>
+				Kaoshiung Rapid Transit Cooperation hired visual designer to determined the visual elements, and the project manager have listed out the requirements in advance, then they held meeting with development teams to discussed the business requirements.<br><br>
+			</div>
+			<div class="col-two">
+				<b>2 -- System Design Phase</b><br>
+				In this step, I utalized the materials the company gave me and made wireframe of the web layout, and I cooporated with databse managers to discuss about the structure of frontend and backend.<br><br>
+			</div>
+		</div>
+		<div class="row-project">
+			<div class="col-two">
+				<b>3 -- System Implementation and Operation</b><br>
+				I developed the frontend code and collaborated with the backend developers to complete the system. Later on we executed testing and then deploy the website.<br><br>
+			</div>
+			<div class="col-two">
+				<b>4 -- System Maintenance</b><br>
+				I collected feedbacks from the users and evaluate, then made adjustments to some of the UI.
+			</div>
 		</div>		
-		<div class="row-project" data-aos="slide-up">
+		<div class="row-project row-project-color">
 			<div class="col-one">
 				<h5>User Interfaces</h5>
-				<img src="web_krtco/krtco1.png" alt="" class="img-col-one">
+				<img src="web_krtco/krtco1.png" alt="" class="img-col-one" data-aos="zoom-in">
 				<h6>01 - Home Page</h6>
-				<img src="web_krtco/krtco2.png" alt="" class="img-col-one">
+				<img src="web_krtco/krtco2.png" alt="" class="img-col-one" data-aos="zoom-in">
 				<h6>02 - Latest News</h6>
-				<img src="web_krtco/krtco3.png" alt="" class="img-col-one">
+				<img src="web_krtco/krtco3.png" alt="" class="img-col-one" data-aos="zoom-in">
 				<h6>03 - Viewing Video</h6>
+			</div>
+		</div>
+		<div class="row-project row-project-color-2" data-aos="slide-up" data-aos-once="true" data-aos-offset="0">
+			<div class="col-one">
+				<h5>Conclusion</h5>
+				In this project, I cooperated with the project team and visual designer in the company, and applied the System Analysis and Design Method the development of this website. However, it lacks the real opinions and insights from the use of the users. The future work can be applying user center design apporach to redesign it.
 			</div>
 		</div>
 		<a href="nsysuhero.html">
@@ -109,7 +136,7 @@
 	</div>
 
 	<footer>
-		<span>Contact wei:</span><br>
+		<span>Contact Wei:</span><br>
 		<a target="_blank" href="https://www.facebook.com/WeiChengLily" class="fa foot fa-facebook" style="font-size:25px"></a>
 		<a target="_blank" href="https://github.com/ChengWei1010" class="fa foot fa-github" style="font-size:25px"></a>
 		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa foot fa-linkedin" style="font-size:25px"></a><br>
