--- a/projects/nsysuhero.html
+++ b/projects/nsysuhero.html
@@ -77,7 +77,7 @@
 			</div>
 		</div>
 		
-		<div class="row-project" data-aos="slide-up">
+		<div class="row-project row-project-color" data-aos="slide-up" >
 			<div class="col-one">
 				<h5>Game Scenes</h5>
 				<img src="game_nsysuhero/nsysuhero1.png" class="img-col-one"alt="" data-aos="slide-up">
