--- a/art.html
+++ b/art.html
@@ -13,7 +13,8 @@
 	<link rel="icon" type="image/x-icon" href="img/logo.png" >
 	<link rel="shortcut icon" type="image/x-icon" href="img/logo.png"/>
 	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-	<script src="scroll.js"></script>
+	<!-- AOS -->
+	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
@@ -31,7 +32,7 @@
 	  <span></span> <span></span> <span></span> <span></span>
 	</div>
 
-	<header>
+	<header class="header">
 		<a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
 		<a target="_blank" href="weicheng_resume.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
 		<a href="https://medium.com/design-diary-by-wei-cheng" class="a_nav"><span class="btn_nav">DESIGN DIARY</span></a>
@@ -44,18 +45,18 @@
 			<p>
 				I like poster design, oil painting, and calligraphy.<br>
 				Here are some of my art works.<br>
-			</p>
-			<div class="toolbar mb2 mt2">
-			  <button class="btn fil-cat" href="" data-rel="all">All</button>
-			  <button class="btn fil-cat" data-rel="poster">Posters</button>
-			  <button class="btn fil-cat" data-rel="flyers">Flyers</button>
-			  <button class="btn fil-cat" data-rel="paintings">Drawings</button>
-			  <button class="btn fil-cat" data-rel="calligraphy">Calligraphy</button>
-			</div> 
+			</p> 
 		</article>
 	</div>
 
 <div class="wrapper">
+	<div class="toolbar mb2 mt2">
+	  <button class="btn fil-cat selectedClass" data-rel="all">All</button>
+	  <button class="btn fil-cat" data-rel="poster">Posters</button>
+	  <button class="btn fil-cat" data-rel="flyers">Flyers</button>
+	  <button class="btn fil-cat" data-rel="paintings">Drawings</button>
+	  <button class="btn fil-cat" data-rel="calligraphy">Calligraphy</button>
+	</div>
 	<article class="art">
 	<div id="portfolio">
 		<div class="tile scale-anm paintings all">
@@ -120,6 +121,21 @@
 		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa foot fa-linkedin" style="font-size:25px"></a><br>
 		<span class="copyright">&copy; WEI CHENG | 2018.</span><br>
 	</footer>
+	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 	<script src="loader.js"></script>
+	<script src="scroll.js"></script>
+	<script>
+		$(window).scroll(function() {
+
+	    if ($(this).scrollTop()>500){
+	        $('.header').fadeOut();
+	        $('.toolbar').fadeIn().addClass('fixedTop');
+	    }
+	    else{
+	    	$('.header').fadeIn();
+	    	$('.toolbar').removeClass('fixedTop');
+	    }
+	 });
+	</script>
 </body>
 </html>
