add design diary

--- a/art.html
+++ b/art.html
@@ -18,14 +18,13 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
-	<title>WEI CHENG | Portfolio</title>
+	<title>ART | WEI CHENG</title>
 </head>
 <body>
 	<div class="loader"><img class="img-loader" src="img/logo.gif"></div>
 	<div class="drawer">
-		<span class="drawer_btn_nav"><a href="index.html">PROJECTS</a></span>
+		<span class="drawer_btn_nav"><a href="index.html">WORK</a></span>
 		<span class="drawer_btn_nav"><a href="art.html" class="light">ART</a></span>
-		<span class="drawer_btn_nav"><a href="https://medium.com/design-diary-by-wei-cheng">DESIGN DIARY</a></span>
 		<span class="drawer_btn_nav"><a href="weicheng_resume.pdf">RESUME</a></span>
 	</div>
 	<div class="nav-icon">
@@ -35,9 +34,8 @@
 	<header class="header">
 		<a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
 		<a target="_blank" href="weicheng_resume.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
-		<a href="https://medium.com/design-diary-by-wei-cheng" class="a_nav"><span class="btn_nav">DESIGN DIARY</span></a>
 		<a href="art.html" class="a_nav"><span class="btn_nav light">ART</span></a>
-		<a href="index.html" class="a_nav"><span class="btn_nav">PROJECTS</span></a>
+		<a href="index.html" class="a_nav"><span class="btn_nav">WORK</span></a>
 	</header>
 	<div class="parallax-small parallax-art-1">
 		<article class="intro">
@@ -115,15 +113,15 @@
 
 	</article>
 	<footer>
-		<span>Contact wei:</span><br>
+		<span>Contact Wei:</span><br>
 		<a target="_blank" href="https://www.facebook.com/WeiChengLily" class="fa foot fa-facebook" style="font-size:25px"></a>
 		<a target="_blank" href="https://github.com/ChengWei1010" class="fa foot fa-github" style="font-size:25px"></a>
 		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa foot fa-linkedin" style="font-size:25px"></a><br>
 		<span class="copyright">&copy; WEI CHENG | 2018.</span><br>
 	</footer>
 	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-	<script src="loader.js"></script>
-	<script src="scroll.js"></script>
+	<script src="js/loader.js"></script>
+	<script src="js/scroll.js"></script>
 	<script>
 		$(window).scroll(function() {
 
