--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
 	<div class="loader"><img src="img/logo.gif"></div>
 
 	<div class="drawer">
-		<span class="drawer_btn_nav"><a href="index.html" class="light">PROJECTS</a></span>
+		<span class="drawer_btn_nav"><a href="index.html" class="light">WORK</a></span>
 		<span class="drawer_btn_nav"><a href="art.html">ART</a></span>
-		<span class="drawer_btn_nav"><a href="https://medium.com/design-diary-by-wei-cheng">DESIGN DIARY</a></span>
 		<span class="drawer_btn_nav"><a href="weicheng_resume.pdf">RESUME</a></span>
 	</div>
 	<div class="nav-icon">
@@ -35,9 +34,8 @@
 	<header>
 		<a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
 		<a target="_blank" href="weicheng_resume.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
-		<a href="https://medium.com/design-diary-by-wei-cheng" class="a_nav"><span class="btn_nav">DESIGN DIARY</span></a>
 		<a href="art.html" class="a_nav"><span class="btn_nav">ART</span></a>
-		<a href="index.html" class="a_nav"><span class="btn_nav light">PROJECTS</span></a>
+		<a href="#wrapper" class="a_nav"><span class="btn_nav">WORK</span></a>
 	</header>
 	<div class="parallax-100 parallax-index-1">
 		<article class="intro">
@@ -55,64 +53,34 @@
 		</article>
 	</div>
 <div class="wrapper" id="wrapper">
-	<!-- projects-small -->
-	<article class="index">
-<!-- 	<div class="row">
-	    <div class="project-small" onclick="openProject('app-trip')">
-	    	<img class="project-size" src="projects/app_trip.png" alt="">
-	    	<h2>TripGIF - iOS Application</h2>
-	    </div>
-	    <div class="project-small" onclick="openProject('app-famifilm')">
-	    	<img class="project-size" src="projects/app_famifilm.png" alt="">
-	    	<h2>FamiFilm - Android Application</h2>
-	    </div>
-	</div>
-	<div class="row">
-	    <div class="project-small" onclick="openProject('trip-ks')">
-	    	<img class="project-size" src="projects/trip_ks.png" alt="">
-	    	<h2>TripGIF - KS Exhibition Website</h2>
-	    </div>
-	    <div class="project-small" onclick="openProject('web-krtco')">
-	    	<img class="project-size" src="projects/krtco.png" alt="">
-	    	<h2>Kaohsiung Rapid Transit Co. - Website</h2>
-	    </div>
-	</div>
-	<div class="row"> -->
-<!-- 	    <div class="project-small" onclick="openProject('game')">
-	    	<img class="project-size" src="projects/nsysuhero.png" alt="">
-	    	<h2>NSYSU HERO - Game Design</h2>
-	    </div> -->
 	<article class="wrapper-index">
-<!-- 	<div class="row-index">
-	    <div class="project-small">
-	    	<img class="project-size" src="projects/app_trip.png" alt="">
-	    	<h2>TripGIF - iOS Application</h2>
-	    </div>
-	    <div class="project-small">
-	    	<img class="project-size" src="projects/app_famifilm.png" alt="">
-	    	<h2>FamiFilm - Android Application</h2>
-	    </div>
-	</div> -->
 	<div class="row-index">
-		<h2>PROJECTS</h2>
+		<h2>WORK</h2>
 	    <a href="projects/nsysuhero.html">
 		   	<div class="project-small">
-		    	<img class="project-size" src="projects/game_nsysuhero/nsysuhero0.png" alt="" data-aos="fade-up">
+		    	<img class="project-size" src="projects/game_nsysuhero/nsysuhero0.png" alt="" data-aos="fade-up" data-aos-once="true">
 		    	<h3>NSYSU HERO</h3>
-		    	<h4>Game Design</h4>
+		    	<h4>Game UI Design</h4>
 		    </div>
 	    </a>
 	    <a href="projects/krtco.html">
 		    <div class="project-small">
-		    	<img class="project-size" src="projects/web_krtco/krtco.png" alt="" data-aos="fade-down">
+		    	<img class="project-size" src="projects/web_krtco/krtco.png" alt="" data-aos="fade-down" data-aos-once="true">
 		    	<h3>KRTCO Competition Website</h3>
 		    	<h4>Web UI Design & Develop</h4>
+		    </div>
+		</a>
+		<a href="projects/designdiary.html">
+		    <div class="project-small">
+		    	<img class="project-size" src="projects/design_diary/designdiary.png" alt="" data-aos="fade-down" data-aos-once="true">
+		    	<h3>Design Diary</h3>
+		    	<h4>UX design</h4>
 		    </div>
 		</a>
 	</div>
 	<div class="row-index">
 		<h2>ABOUT WEI</h2>
-		<p>I have 3+ years frontend develop experience,  I am now focusing UI/UX design. Familiar with app development, web frontend development, UI design.</p>
+		<p>I have 3+ years frontend develop experience,  I am now focusing UI/UX design. Familiar with app development, web frontend development, UI/UX design.</p>
 		<div class="traits" data-aos="flip-left">
 			<img src="svg/light.svg" class="svg-index"/><br>
 			<h3>Creative</h3>
@@ -121,22 +89,14 @@
 		<div class="traits" data-aos="flip-left" data-aos-delay="500">
 			<img src="svg/love.svg" class="svg-index"/><br>
 			<h3>Empathetic</h3>
-			<p>Being a UX designer, it is important to listen to users and understand their needs. </p>
+			<p>Being a UX designer, it is important to listen to users and understand their needs. Check out <a href="weicheng_resume.pdf">what I've done</a>!</p>
 		</div>
 		<div class="traits" data-aos="flip-left" data-aos-delay="1000">
 			<img src="svg/gear.svg" class="svg-index"/><br>
 			<h3>Problem Solver</h3>
-			<p>I like to take challenge and solve problems that are related to people's life. Visit my <a href="https://medium.com/design-diary-by-wei-cheng">Design Diary</a> too see more.</p>
+			<p>I like to take challenge and solve problems that are related to people's life. Visit <a href="projects/designdiary.html">Design Diary</a> too see more.</p>
 		</div>
 	</div>
-<!-- 	<div class="row-index">
-	    
-	    <a href="projects/web-krtco.html">
-	    <div class="project-small">
-	    	<img class="project-size" src="projects/trip_ks.png" alt="">
-	    	<h2>TripGIF - KS Exhibition Website</h2>
-	    </div> 
-	</div> -->
 	</article>
 	<footer>
 		<span>Contact Wei:</span><br>
@@ -148,8 +108,8 @@
 	
 	<div id="overlay" onclick="closeProject()"></div>
 </div>
-	<script src="loader.js"></script>
+	<script src="js/loader.js"></script>
 	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-	<script src="scroll.js"></script>
+	<script src="js/scroll.js"></script>
 </body>
 </html>
