--- a/projects/designdiary.html
+++ b/projects/designdiary.html
@@ -18,7 +18,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
-	<title>NSYSU HERO | WEI CHENG</title>
+	<title>DESIGN DIARY | WEI CHENG</title>
 </head>
 <body>
 	<div class="drawer">
@@ -37,98 +37,79 @@
 		<a href="../index.html" class="a_nav"><span class="btn_nav light">WORK</span></a>
 	</header>
 
-	<div class="parallax-small parallax-nsysuhero">
+	<div class="parallax-small parallax-designdiary">
 		<article class="intro">
-			<h1>NSYSU HERO</h1>
-			<p>Game UI Design</p>
+			<h1>DESIGN DIARY</h1>
+			<p>UX Design</p>
 		</article>
 	</div>
 
 	<div class="wrapper-project" id="wrapper">
 		<div class="row-project">
 			<div class="col-two">
-			<h5>Background</h5>
-				<p>This Unity 2-Dimentional game was made in a 2 days hackathon competition in Department of Information Management at National Sun Yat-sun University.<br><br>
-				</p>
+				<img src="design_diary/logo.png" alt="" class="img-col-one">
 			</div>
 			<div class="col-two">
-				<img src="game_nsysuhero/nsysuhero.svg" alt="" class="img-col-two">
+			<h5>Overview</h5>
+				<p>This is a medium publication includes 10 design diaries. Each post define, evaluate, and redesign a design of mobile application, website, or one thing in everyday life. <br><br>I applied methods taught in "Understanding And Serving User" course at UT Austin to each design diary.
+				</p>
 			</div>
 		</div>
 		<div class="row-project">
 			<div class="col-one">
+				<a target="_blank" href="https://medium.com/design-diary-by-wei-cheng">
+				<div class="btn-visit">VISIT MEDIUM PUBLICATION</div></a>
+			</div>
+		</div>
+		<div class="row-project">
+			<div class="col-three">
+				<h5>Tools</h5>
 				<p>
-				NSYSU HERO is based on the geographical background of National Sun Yat-sun University. There are a lot of monkeys on the mountainous campus, and since sometimes the monkeys can be pretty aggressive, campus safeguards would use airgun to scareoff the monkeys preventing them from attacking students, and bring the monkeys back to their home to protect them. This game use easy keyboard control the character to interact.
+					Sketch<br>
+					Photoshop<br>
+					sketches
 				</p>
 			</div>
-		</div>
-
-		<div class="row-project" data-aos="slide-up" data-aos-once="true">
-			<div class="col-two">
-			<h5>Role</h5>
-			<p>I am the graphic designer in a team of 3 people. I designed elements including the objects, and background in the game scenes.</p>
+			<div class="col-three">
+				<h5>Methods</h5>
+				<p>
+					User Center Design<br>
+					UX Evaluation<br>
+					Literature Review
+				</p>
 			</div>
-
-			<div class="col-two">
-				<h5>Tools</h5>
-				<p>Adobe Illustrator<br>Adobe Photoshop<br>Unity</p>
-			</div>
-		</div>
-		
-		<div class="row-project row-project-color" data-aos="slide-up" data-aos-once="true">
-			<div class="col-one">
-				<h5>Game Scenes</h5>
-				<img src="game_nsysuhero/nsysuhero1.png" class="img-col-one"alt="" data-aos="zoom-in" data-aos-once="true" >
-				<h6>01 - Home Page</h6>
-				<p>It is where letting user to choose between seeing the instruction page or starting the games.</p>
-				
-				<img src="game_nsysuhero/nsysuhero_instruc.png" class="img-col-one"alt="" data-aos="zoom-in" data-aos-once="true" >
-				<h6>02 - Instruction Page</h6>
-				<p>It explains the rules about how to play this game.</p>
-
-				<img src="game_nsysuhero/nsysuhero_game.png" class="img-col-one"alt="" data-aos="zoom-in" data-aos-once="true" >
-				<h6>03 - Game Scene</h6>
-				<p>The main page for the game. The donut indicates the life of the character.
-				It explains the rules about how to play this game.</p>
+			<div class="col-three">
+				<h5>Time</h5>
+				<p>3 Months</p>
 			</div>
 		</div>
-		<div class="row-project" data-aos="slide-up" data-aos-once="true" >
-			<div class="col-one">
-				<h5>UI Elements</h5>
-
-			</div>
-			<div class="col-two">
-				<img src="game_nsysuhero/gamescene-3-1.png" class="img-col-two" alt="">
-			</div>
-
-			<div class="col-two">
-				<img src="game_nsysuhero/gamescene-3-2.png" class="img-col-two" alt="">
-			</div>
+		<div class="row-project row-project-color">
+			<img src="design_diary/designdiary1.png" alt="" class="img-col-one">
 		</div>
 
-		<a href="designdiary.html">
+		<a href="krtco.html">
 			<div class="seemore">
 				<div class="col-three">
 					<h6 class="hcenter">NEXT PROJRCT ></h6>
 				</div>
 				<div class="col-three">
-					<h5 class="hcenter">DESIGN DIARY</h5>
+					<h5 class="hcenter">KRTCO Website</h5>
 				</div>
 				<div class="col-three">
-					<img class="img-col-one" src="design_diary/designdiary.png" alt="">
+					<img class="img-col-one" src="web_krtco/krtco.png" alt="">
 				</div>
 			</div>
 		</a>
 	</div>
 
 	<footer>
-		<span>Contact wei:</span><br>
+		<span>Contact Wei:</span><br>
 		<a target="_blank" href="https://www.facebook.com/WeiChengLily" class="fa foot fa-facebook" style="font-size:25px"></a>
 		<a target="_blank" href="https://github.com/ChengWei1010" class="fa foot fa-github" style="font-size:25px"></a>
 		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa foot fa-linkedin" style="font-size:25px"></a><br>
 		<span class="copyright">&copy; WEI CHENG | 2018.</span><br>
 	</footer>
 	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-	<script src="../js/scroll.js"></script>
+	<script src="../scroll.js"></script>
 </body>
 </html>
