--- a/projects/krtco.html
+++ b/projects/krtco.html
@@ -18,13 +18,12 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
-	<title>KRTCO website | WEI CHENG</title>
+	<title>KRTCO WEBSITE | WEI CHENG</title>
 </head>
 <body>
 	<div class="drawer">
-		<span class="drawer_btn_nav"><a href="../index.html" class="light">PROJECTS</a></span>
+		<span class="drawer_btn_nav"><a href="../index.html" class="light">WORK</a></span>
 		<span class="drawer_btn_nav"><a href="../art.html">ART</a></span>
-		<span class="drawer_btn_nav"><a href="https://medium.com/design-diary-by-wei-cheng">DESIGN DIARY</a></span>
 		<span class="drawer_btn_nav"><a href="../weicheng_resume.pdf">RESUME</a></span>
 	</div>
 	<div class="nav-icon">
@@ -34,15 +33,14 @@
 	<header>
 		<a href="../index.html"><img class="logo" src="../img/logo.png" alt="logo"></a>
 		<a target="_blank" href="../weicheng_resume.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
-		<a href="https://medium.com/design-diary-by-wei-cheng" class="a_nav"><span class="btn_nav">DESIGN DIARY</span></a>
 		<a href="../art.html" class="a_nav"><span class="btn_nav">ART</span></a>
-		<a href="../index.html" class="a_nav"><span class="btn_nav light">PROJECTS</span></a>
+		<a href="../index.html" class="a_nav"><span class="btn_nav light">WORK</span></a>
 	</header>
 
 	<div class="parallax-small parallax-krtco">
 		<article class="intro">
 			<h1>KRTCO Competition Website</h1>
-			<h2>UI Design & Develop</h2>
+			<p>UI Design & Develop</p>
 		</article>
 	</div>
 
@@ -106,11 +104,11 @@
 		<div class="row-project row-project-color">
 			<div class="col-one">
 				<h5>User Interfaces</h5>
-				<img src="web_krtco/krtco1.png" alt="" class="img-col-one" data-aos="zoom-in">
+				<img src="web_krtco/krtco1.png" alt="" class="img-col-one" data-aos="zoom-in" data-aos-once="true" >
 				<h6>01 - Home Page</h6>
-				<img src="web_krtco/krtco2.png" alt="" class="img-col-one" data-aos="zoom-in">
+				<img src="web_krtco/krtco2.png" alt="" class="img-col-one" data-aos="zoom-in" data-aos-once="true" >
 				<h6>02 - Latest News</h6>
-				<img src="web_krtco/krtco3.png" alt="" class="img-col-one" data-aos="zoom-in">
+				<img src="web_krtco/krtco3.png" alt="" class="img-col-one" data-aos="zoom-in" data-aos-once="true" >
 				<h6>03 - Viewing Video</h6>
 			</div>
 		</div>
@@ -143,6 +141,6 @@
 		<span class="copyright">&copy; WEI CHENG | 2018.</span><br>
 	<!-- </footer> -->
 	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-	<script src="../scroll.js"></script>
+	<script src="../js/scroll.js"></script>
 </body>
 </html>
