update mobile css

--- a/projects/krtco.html
+++ b/projects/krtco.html
@@ -39,7 +39,7 @@
 
 	<div class="parallax-small parallax-krtco">
 		<article class="intro">
-			<h1>KRTCO Competition Website</h1>
+			<h1>KRTCO Website</h1>
 			<p>UI Design & Develop</p>
 		</article>
 	</div>
