--- a/projects/designdiary.html
+++ b/projects/designdiary.html
@@ -110,6 +110,6 @@
 		<span class="copyright">&copy; WEI CHENG | 2018.</span><br>
 	</footer>
 	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-	<script src="../scroll.js"></script>
+	<script src="../js/scroll.js"></script>
 </body>
 </html>
